<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">走知</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="main">#FA9F00</color>
    <color name="deepgray">#8B8B8B</color>
    <color name="lightBlack">#525252</color>
    <color name="divide">#eaeaea</color>
    <color name="bg">#F7F7F7</color>
    
     <!-- 新增属性 -->
    <string name="tv_head_top">走知</string>
    <string name="tv_head_bottom">带着攻略开始旅行!</string>
    <string name="content_escription">content_escription</string>
    <string name="btn_start">旅行，从这里开始</string>
    <string name="tv_guide_populace_share">旅行的分享</string>
    <string name="tv_guide_house_text_top">玩什么！</string>
    <string name="tv_guide_house_text_center">必游，亮点，特别推荐</string>
    <string name="tv_guide_house_text_bottom">该知道的都能知道</string>
    
</resources>